--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
         <title>Dig UP!</title>
         
         <style>
+            body {
+                overflow-y: hidden;
+                font-family: "Courier new", "Cambria";
+                margin: 20px;
+            }
 
+            header {
+                border: 1px solid black;
+                text-align: center;
+                margin-bottom: 2px;
+            }
+
+            canvas {
+                border: 1px solid black;
+            }
+
+            section {
+                border: 1px solid black;
+                padding: 10px;
+            }
+
+            main {
+                border: 1px solid black;
+                padding: 20px;
+            }
         </style>
     </head>
     <body>
@@ -16,6 +40,7 @@
         </header>
         <main>
             <section>
+                <p>Test Text Test Text Test Text Test Text Test Text Test Text</p>
                 <canvas>This element is unsupported.</canvas>
             </section>
         </main>
