Updated the style and create the simple but effective style I have for my initial idea.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             }
 
             header {
-                border: 1px solid black;
                 margin-bottom: 2px;
             }
 
@@ -23,7 +22,7 @@
             }
 
             section {
-                border: 1px solid black;
+                border: 1px dashed black;
                 padding: 10px;
             }
 
@@ -44,5 +43,9 @@
                 <canvas>This element is unsupported.</canvas>
             </section>
         </main>
+
+        <script>
+            // add script here.
+        </script>
     </body>
 </html>
