Changed the height of the main section to take the majority of the space.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             section {
                 border: 1px dashed black;
                 padding: 10px;
+                height: 100%;
             }
 
             main {
                 border: 1px solid black;
                 padding: 20px;
+                padding-bottom: 40px;
+                height: 68vh;
             }
         </style>
     </head>
