Added indentation to the text box to present to the user that it is a text box.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 border: 1px dashed black;
                 padding: 10px;
                 height: 100%;
+                text-indent: 50px;
             }
 
             main {
