--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </main>
 
         <script>
-            // add script here.
+            function innit() {
+                
+            }
         </script>
     </body>
 </html>
