--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             }
         </style>
     </head>
-    <body onmousemove="init(event); getMouseX(event); getMouseY(event);">
+    <body onmousemove="setMouse(event); init();">
         <header>
             <h1>Dig UP!</h1>
             <span>Archeology-base memory game.</span>
@@ -63,16 +63,17 @@
 
             let mapArray = [];
 
-            var getMouseX = function(e) {
-                return Math.round(range((e.clientX - rect.left) * scaleX, 0, rect.width * scaleX));
-            }
-            var getMouseY = function(e) {
-                return Math.round(range((e.clientY - rect.top) * scaleY, 0, rect.height * scaleY));
+            let mouseX = 0;
+            let mouseY = 0;
+
+            function init() {
+                document.getElementById("textbox").innerHTML = mouseX+" "+mouseY
+                // document.getElementById("textbox").innerHTML = getMouseX(e)+", "+getMouseY(e)+" || "+scaleX+", "+scaleY;
             }
 
-            function init(e) {
-                document.getElementById("textbox").innerHTML = mapGenerator(20, 0, 200, MapSizeX, MapSizeY)
-                // document.getElementById("textbox").innerHTML = getMouseX(e)+", "+getMouseY(e)+" || "+scaleX+", "+scaleY;
+            function setMouse(e) {
+                mouseX = Math.round(range((e.clientX - rect.left) * scaleX, 0, rect.width * scaleX));
+                mouseY = Math.round(range((e.clientY - rect.top) * scaleY, 0, rect.height * scaleY));
             }
 
             function range(val, min, max) {
@@ -124,7 +125,7 @@
                             // This is the tile that is to the top of the chosen tile and is modified in the way stated in the previous comment.
                             tempMultiArray[x][y+1] = range(Math.round(((tempMultiArray[x][y+1]+diff)+tempMultiArray[x][y])/2), MinV, MaxV);
                         }
-                        if ( y-1 > 0) {
+                        if (y-1 > 0) {
                             // This is the tile that is to the bottom of the chosen tile and is modified in the way stated in the previous comment.
                             tempMultiArray[x][y-1] = range(Math.round(((tempMultiArray[x][y-1]+diff)+tempMultiArray[x][y])/2), MinV, MaxV);
                         }
